kustomize/components/without-loadgenerator.yaml
apiVersion: kustomize.config.k8s.io/v1alpha1
kind: Component
patchesStrategicMerge:
- |-
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: loadgenerator
    namespace: restaurant-app
  $patch: delete
