kustomize/components/network-policies.yaml
apiVersion: kustomize.config.k8s.io/v1alpha1
kind: Component
resources:
- ../base/
patchesStrategicMerge:
- |-
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: default-deny
    namespace: restaurant-app
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
